--- a/WEB PAGE/shokei.html
+++ b/WEB PAGE/shokei.html
@@ -172,4 +172,7 @@
             window.location.href = "./yakushoku.html";
         }
     }
+
+    //投票データクリア
+    sessionStorage.removeItem("votes");
 </script>
