--- a/WEB PAGE/vote.html
+++ b/WEB PAGE/vote.html
@@ -39,7 +39,6 @@
 </body>
 
 <script>
-
     // セッションストレージからプレイヤーデータを取得
     const playersRaw = sessionStorage.getItem("players");
     const players = playersRaw ? JSON.parse(playersRaw) : null;
@@ -49,6 +48,9 @@
         console.error("プレイヤーデータが見つかりません");
         throw new Error("プレイヤーデータがありません");
     }
+
+    // 現在のプレイヤー番号を取得または初期化
+    let currentPlayer = parseInt(sessionStorage.getItem("currentPlayer") || "1", 10);
 
     // ドロップダウンの要素を取得
     const voteSelect = document.getElementById("voteSelect");
@@ -62,41 +64,39 @@
             voteSelect.appendChild(option);
         }
     });
-    // 現在のプレイヤー番号を取得
-    const currentPlayer = parseInt(sessionStorage.getItem("currentPlayer") || "1", 10);
 
     // 次のプレイヤー番号を設定
     function nextPlayer() {
-        let nextPlayerIndex = currentPlayerNumber + 1;
+        let nextPlayerIndex = currentPlayer + 1;
 
         // 生存している次のプレイヤーを探す
-        while (nextPlayerIndex <= playerList.length) {
-            const nextPlayer = playerList[nextPlayerIndex - 1]; // 配列インデックス調整
+        while (nextPlayerIndex <= players.length) {
+            const nextPlayer = players[nextPlayerIndex - 1]; // 配列インデックス調整
             if (nextPlayer?.status === "alive") {
-                break; // 生存プレイヤーを見つけた場合ループを終了
-                console.log(nextPlayerIndex);
+                console.log(`次のプレイヤー番号: ${nextPlayerIndex}`);
+                break;
             }
             nextPlayerIndex++;
         }
 
         // 全員の行動が完了した場合
-        if (nextPlayerIndex > playerList.length) {
+        if (nextPlayerIndex > players.length) {
             alert("全プレイヤーの行動が完了しました。");
             sessionStorage.removeItem("currentPlayer"); // リセット
-            location.href = "./morning.html";
+            location.href = "./shokei.html";
             return;
         }
 
         // 次のプレイヤー番号をセッションストレージに保存
-        sessionStorage.setItem("currentPlayer", nextPlayerIndex);
+        currentPlayer = nextPlayerIndex;
+        sessionStorage.setItem("currentPlayer", currentPlayer);
 
         // 本人確認ページに遷移
-        location.href = "./confirmation.html?nx=role";
+        location.href = "./confirmation.html?nx=vote";
     }
 
     // 投票先の保存
     function vote() {
-        const playersData = JSON.parse(sessionStorage.getItem("players") || "[]");
         const targetPlayerNumber = document.getElementById("voteSelect").value; // セレクトボックスの選択値を取得
 
         if (!targetPlayerNumber) {
@@ -104,6 +104,7 @@
             return;
         }
 
+        // 投票データを取得または初期化
         const votes = JSON.parse(sessionStorage.getItem("votes") || "{}");
 
         // 現在のプレイヤーの投票を記録
@@ -112,21 +113,7 @@
         // 更新した投票データをセッションストレージに保存
         sessionStorage.setItem("votes", JSON.stringify(votes));
 
-        // 次の画面に遷移
-        //alert(`プレイヤー${targetPlayerNumber}に投票しました！`);
-        const nextPlayer = currentPlayer + 1;
-
-        if (nextPlayer > playersData.length) {
-            alert("全プレイヤーの投票が行われました。");
-            sessionStorage.removeItem("currentPlayer"); // リセット
-            location.href = "./shokei.html";
-            return;
-        }
-
-        if (targetPlayerNumber) {
-            sessionStorage.setItem("currentPlayer", nextPlayer);
-            location.href = "./confirmation.html?nx=vote"; // 次のプレイヤーに移動
-        }
+        // 次のプレイヤーに進む
+        nextPlayer();
     }
-
 </script>
