--- a/WEB PAGE/discuss.html
+++ b/WEB PAGE/discuss.html
@@ -8,7 +8,7 @@
     <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="startCountdown(180)"> <!-- 3分のカウントダウン -->
 
     <div class="Title">
         <div class="container-sm">
@@ -25,50 +25,49 @@
         </div>
     </div>
 
-
-    <script>
-
-        // カウントダウン処理
-        let countdownInterval; // カウントダウンのインターバルを管理する変数
-
-        function startCountdown(seconds) {
-            let counter = seconds;
-            countdownInterval = setInterval(() => {
-                document.getElementById('countdown').textContent = counter;
-                counter--;
-                if (counter < 0) {
-                    clearInterval(countdownInterval);
-                    // 本人確認ページに戻る
-                    location.href = "./confirmation.html?nx=speech"; // 個人会議
-                }
-            }, 1000);
-        }
-
-    </script>
-
-    <body onload="startCountdown(10)"> <!-- 3分のカウントダウン -->
-        <div class="row gy-3">
-            <div class="text-center">
-                <h5>
-                    DAY2
-                </h5>
-                <h3>
-                    全体会議
-                </h3>
-            </div>
+    <div class="row gy-3">
+        <div class="text-center">
+            <h5>
+                DAY2
+            </h5>
+            <h3>
+                全体会議
+            </h3>
         </div>
+    </div>
 
-        <div>
-            <h1>ページが<span id="countdown">180</span>秒後に遷移します。</h1>
-        </div>
-    </body>
+    <div>
+        <h1>ページが<span id="countdown">180</span>秒後に遷移します。</h1>
+    </div>
 
-
-
-
-
-
-
-
+    <div class="text-center">
+        <button type="button" class="btn btn-primary" onclick="skipCountdown()">スキップ</button> <!-- スキップボタン -->
+    </div>
 
 </body>
+
+<script>
+
+    // カウントダウン処理
+    let countdownInterval; // カウントダウンのインターバルを管理する変数
+
+    function startCountdown(seconds) {
+        let counter = seconds;
+        countdownInterval = setInterval(() => {
+            document.getElementById('countdown').textContent = counter;
+            counter--;
+            if (counter < 0) {
+                clearInterval(countdownInterval);
+                // 本人確認ページに戻る
+                location.href = "./confirmation.html?nx=speech"; // 個人会議
+            }
+        }, 1000);
+    }
+
+    // スキップボタンを押した時の動作
+    function skipCountdown() {
+        clearInterval(countdownInterval); // カウントダウンを停止
+        location.href = "./confirmation.html?nx=speech"; // 個人会議
+    }
+
+</script>
