--- a/WEB PAGE/index.html
+++ b/WEB PAGE/index.html
@@ -45,12 +45,14 @@
 
   <script>
     // 初期化
+    sessionStorage.clear();
     sessionStorage.setItem("day", 0);
     sessionStorage.setItem("kisi",0);
     sessionStorage.setItem("dead", 0);
     sessionStorage.setItem("game", 0);
     sessionStorage.setItem("currentPlayer", 1);
     sessionStorage.removeItem("votes");
+    sessionStorage.removeItem("dokusai");
 
 
     // プレイヤーデータをセッションストレージに保存
@@ -77,7 +79,7 @@
       }
 
       // 役職をシャッフル
-      const roles = ["市民１", "パン屋", "占い師", "騎士", "バカ", "狂人", "人狼", "市民２"];
+      const roles = ["市民１", "パン屋", "占い師", "騎士", "バカ", "狂人", "人狼", "市民２","市民３","独裁者"];
       const shuffledRoles = shuffle([...roles]); // 元の配列を破壊しないようコピー
 
       // プレイヤーに役職を割り当てる
