--- a/WEB PAGE/speech.html
+++ b/WEB PAGE/speech.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Bootstrap Demo</title>
     <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
-
     <div class="Title">
         <div class="container-sm">
             <div class="row gy-3">
                 <figure class="text-center">
                     <blockquote class="blockquote">
-                        <h1>北辰寮　北人狼</h1>
+                        <h1>北辰寮 北人狼</h1>
                     </blockquote>
                     <figcaption class="blockquote-footer">
                         寮則違反者はこの中にいる <cite title="Source Title">on 2024</cite>
@@ -26,92 +25,68 @@
     </div>
 
     <div class="text-center">
-
-        <body onload="startCountdown(30)"> <!-- 30秒のカウントダウン -->
-            <div>
-                <h1>ページが<span id="countdown">30</span>秒後に遷移します。</h1>
-                <button type="button" class="btn btn-primary" onclick="skipCountdown()">スキップ</button> <!-- スキップボタン -->
-            </div>
-        </body>
+        <div>
+            <h1>ページが<span id="countdown">--</span>秒後に遷移します。</h1>
+            <button type="button" class="btn btn-primary" onclick="skipCountdown()">スキップ</button>
+        </div>
     </div>
 
-</body>
+    <script>
+        // セッションストレージからプレイヤーデータを取得
+        const playersRaw = sessionStorage.getItem("players");
+        const players = playersRaw ? JSON.parse(playersRaw) : null;
 
-<script>
-    // セッションストレージからプレイヤーデータを取得
-    const playersRaw = sessionStorage.getItem("players");
-    const players = playersRaw ? JSON.parse(playersRaw) : null;
-
-    // プレイヤーデータが存在しない場合のエラー処理
-    if (!players || players.length === 0) {
-        console.error("プレイヤーデータが見つかりません");
-        throw new Error("プレイヤーデータがありません");
-    }
-
-    // 現在のプレイヤー番号を取得
-    let currentPlayerNumber = sessionStorage.getItem("currentPlayer")
-        ? parseInt(sessionStorage.getItem("currentPlayer"))
-        : 1;
-
-    // 1番が死亡している場合、生きている最も若い番号のプレイヤーを探す
-    if (players[currentPlayerNumber - 1]?.status !== "alive") {
-        for (let i = 0; i < players.length; i++) {
-            if (players[i].status === "alive") {
-                currentPlayerNumber = i + 1; // プレイヤー番号は配列インデックス+1
-                break;
-            }
-        }
-    }
-
-    // 現在のプレイヤー番号をセッションストレージに保存
-    sessionStorage.setItem("currentPlayer", currentPlayerNumber);
-
-    console.log(`現在のプレイヤー番号: ${currentPlayerNumber}`);
-        
-    // プレイヤーリストの取得
-    const playerListRaw = sessionStorage.getItem("players");
-    const playerList = playerListRaw ? JSON.parse(playerListRaw) : [];
-    if (playerList.length === 0) {
-        console.error("プレイヤーリストが見つかりません。");
-        alert("エラー: プレイヤーデータが読み込まれていません。");
-    }
-
-    // 次のプレイヤー番号を設定
-    function nextPlayer() {
-        let nextPlayerIndex = currentPlayerNumber + 1;
-
-        // 生存している次のプレイヤーを探す
-        while (nextPlayerIndex <= playerList.length) {
-            const nextPlayer = playerList[nextPlayerIndex - 1]; // 配列インデックス調整
-            if (nextPlayer?.status === "alive") {
-                console.log(`次のプレイヤー番号は ${nextPlayerIndex} です。`);
-                break; // 生存プレイヤーを見つけた場合ループを終了
-            }
-            nextPlayerIndex++;
+        // プレイヤーデータが存在しない場合のエラー処理
+        if (!players || players.length === 0) {
+            console.error("プレイヤーデータが見つかりません");
+            alert("エラー: プレイヤーデータが読み込まれていません。");
+            throw new Error("プレイヤーデータがありません");
         }
 
-        // 全員の行動が完了した場合
-        if (nextPlayerIndex > playerList.length) {
+        // 現在のプレイヤー番号を取得
+        let currentPlayerNumber = sessionStorage.getItem("currentPlayer")
+            ? parseInt(sessionStorage.getItem("currentPlayer"))
+            : 1;
+
+        // 生存している最初のプレイヤーを探す
+        if (players[currentPlayerNumber - 1]?.status !== "alive") {
+            for (let i = 0; i < players.length; i++) {
+                if (players[i].status === "alive") {
+                    currentPlayerNumber = i + 1; // プレイヤー番号は配列インデックス+1
+                    break;
+                }
+            }
+        }
+
+        // 現在のプレイヤー番号をセッションストレージに保存
+        sessionStorage.setItem("currentPlayer", currentPlayerNumber);
+        console.log(`現在のプレイヤー番号: ${currentPlayerNumber}`);
+
+        // 次のプレイヤーに進む
+        function nextPlayer() {
+            let nextPlayerIndex = currentPlayerNumber + 1;
+
+            // 生存している次のプレイヤーを探す
+            while (nextPlayerIndex <= players.length) {
+                const nextPlayer = players[nextPlayerIndex - 1]; // 配列インデックス調整
+                if (nextPlayer?.status === "alive") {
+                    currentPlayerNumber = nextPlayerIndex;
+                    sessionStorage.setItem("currentPlayer", currentPlayerNumber);
+                    location.href = "./confirmation.html?nx=speech";
+                    return;
+                }
+                nextPlayerIndex++;
+            }
+
+            // 全員の行動が完了した場合
             alert("全プレイヤーの発言が完了しました。");
             sessionStorage.removeItem("currentPlayer"); // リセット
-            location.href = "./confirmation.html?nx=vote";
-            return;
+            location.href = "./discuss.html";
         }
 
-        // 次のプレイヤー番号をセッションストレージに保存
-        currentPlayer = nextPlayerIndex; // 現在のプレイヤーを更新
-        sessionStorage.setItem("currentPlayer", currentPlayer);
-
-        // 本人確認ページに遷移
-        location.href = "./confirmation.html?nx=speech";
-    }
-
-    // カウントダウン処理
-    let countdownInterval; // カウントダウンのインターバルを管理する変数
-
-    function startCountdown(seconds) {
-        let counter = seconds;
-        countdownInterval = setInterval(() => {
+        // カウントダウン処理
+        let counter = 30; // カウントダウンの秒数
+        const countdownInterval = setInterval(() => {
             document.getElementById('countdown').textContent = counter;
             counter--;
             if (counter < 0) {
@@ -119,11 +94,13 @@
                 nextPlayer(); // 次のプレイヤーに進む
             }
         }, 1000);
-    }
 
-    // スキップボタンを押した時の動作
-    function skipCountdown() {
-        clearInterval(countdownInterval); // カウントダウンを停止
-        nextPlayer(); // 次のプレイヤーに進む
-    }
-</script>
+        // スキップボタンを押した時の動作
+        function skipCountdown() {
+            clearInterval(countdownInterval); // カウントダウンを停止
+            nextPlayer(); // 次のプレイヤーに進む
+        }
+    </script>
+</body>
+
+</html>
