speech10->speechのバグ修正

--- a/WEB PAGE/speech10.html
+++ b/WEB PAGE/speech10.html
@@ -72,7 +72,7 @@
                 if (nextPlayer?.status === "alive") {
                     currentPlayerNumber = nextPlayerIndex;
                     sessionStorage.setItem("currentPlayer", currentPlayerNumber);
-                    location.href = "./confirmation.html?nx=speech";
+                    location.href = "./confirmation.html?nx=speech10";
                     return;
                 }
                 nextPlayerIndex++;
