--- a/WEB PAGE/speech.html
+++ b/WEB PAGE/speech.html
@@ -81,7 +81,7 @@
             // 全員の行動が完了した場合
             alert("全プレイヤーの発言が完了しました。");
             sessionStorage.removeItem("currentPlayer"); // リセット
-            location.href = "./discuss.html";
+            location.href = "./confirmation.html?nx=vote";
         }
 
         // カウントダウン処理
