--- a/WEB PAGE/role.html
+++ b/WEB PAGE/role.html
@@ -85,6 +85,17 @@
 
         switch (playerRole) {
             case "人狼":
+                // 人狼プレイヤーのIDを取得
+                const dokusaiPlayers = playersData
+                    .filter(player => player.yakushoku === "独裁者") // 役職が「人狼」のプレイヤーを探す
+                    .map(player => player.id); // IDだけを取得
+
+                if (dokusaiPlayers.length > 0) {
+                    // 配列を文字列として表示するために join を使用
+                    alert(`プレイヤー ${dokusaiPlayers.join(", ")} が独裁者です。`);
+                } else {
+                    alert("独裁者が見つかりませんでした。");
+                }
                 roleMessageElement.textContent = "あなたは人狼です。市民を全滅させましょう！";
 
                 if (day != 0) {
@@ -246,7 +257,7 @@
             case "独裁者":
                 roleMessageElement.textContent = "あなたは独裁者です。人狼陣営です。一度だけ任意の人を追放できます。";
 
-                
+
 
                 // 人狼プレイヤーのIDを取得
                 const kyojinPlayers = playersData
